--- a/Modulo_#_HTML/Exercício_#_01_#_Formulario.html
+++ b/Modulo_#_HTML/Exercício_#_01_#_Formulario.html
@@ -73,8 +73,8 @@
             <input type="email" id="email" name="email" required>
 
             <!-- Campo Senha-->
-            <label form="senha">Senha:</label>
-            <input type="senha" id="senha" name="senha" required>
+            <label form="password">Senha:</label>
+            <input type="password" id="password" name="password" required>
 
             <!-- Botão de Envio-->
             <button type="submit">Cadastrar</button>
