--- a/Exercício_1_Modulo_CSS/index.html
+++ b/Exercício_1_Modulo_CSS/index.html
@@ -20,13 +20,13 @@
 
             <ul>
 
-                <li>Mercado Financeiro</li>
+                <a href="#Mercado Financeiro"><li>Mercado Financeiro</li></a>
 
-                <li>Esportes</li>
+                <a href="#Esportes"><li>Esportes</li></a>
 
-                <li>Geek</li>
+                <a href="#Geek"><li>Geek</li></a>
 
-                <li>Cryptos</li>
+                <a href="#Cryptos"><li>Cryptos</li></a>
 
             </ul>
 
