Update style e index.html
Criação da section e sua estilização.

--- a/Projeto_1/index.html
+++ b/Projeto_1/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GAMES SHOP - sua loja de Jogos</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -34,9 +37,59 @@
 
             </nav> <!-- Fim da Barra de Navegação -->
 
-        </div>
+        </div> <!-- Fim di Container -->
 
     </header> <!-- Fim do Header -->
+
+    <section id="about">
+
+        <div class="container">
+
+            <img class="store-front" src="./images/loja.jpg" alt="Fachada da Loja Game SHOP"> <!-- Imagem -->
+
+            <div>
+
+                <h2>Sobre a Loja</h2>
+
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quam distinctio, eius debitis, cumque cum accusantium deleniti quod necessitatibus facilis 
+                    veniam quae dolor earum fuga est at! Itaque esse commodi vel!
+                </p>
+
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quam distinctio, eius debitis, cumque cum accusantium deleniti quod necessitatibus facilis 
+                    veniam quae dolor earum fuga est at! Itaque esse commodi vel!
+                </p>
+
+                <ul class="brands-list">
+
+                    <li>
+
+                        <img src="./images/nintendo.png" alt="nintendo">
+
+                    </li>
+
+                    <li>
+
+                        <img src="./images/xbox.png" alt="x-box">
+
+                    </li>
+
+                    <li>
+
+                        <img src="./images/playstation.png" alt="playstation">
+
+                    </li>
+
+                </ul> <!-- Fim da Lista -->
+
+            </div> <!-- Fim da Div -->
+
+        </div> <!-- Fim do Container -->
+
+    </section> <!-- Fim da Section -->
 
 
 </body>
