--- a/Projeto_1/index.html
+++ b/Projeto_1/index.html
@@ -23,13 +23,13 @@
 
                     <li>
 
-                        <a href="#">Sobre a Loja</a> <!-- Link 1 -->
+                        <a href="#about">Sobre a Loja</a> <!-- Link 1 -->
 
                     </li>
 
                     <li>
 
-                        <a href="#">Contato</a> <!-- Link 2 -->
+                        <a href="#contact">Contato</a> <!-- Link 2 -->
 
                     </li>
 
@@ -90,6 +90,97 @@
         </div> <!-- Fim do Container -->
 
     </section> <!-- Fim da Section -->
+
+    <section id="contact">
+
+        <div class="container">
+
+            <h2>Contato</h2>
+
+            <div class="contact-methods">
+
+                <div>
+
+                    <h3>Fale Conosco</h3>
+
+                    <form action="">
+
+                        <input type="text" placeholder="Seu Nome" required>
+
+                        <input type="e-mail" placeholder="Seu e-mail" required>
+
+                        <input type="tel" placeholder="Seu Telefone (opcional)">
+
+                        <textarea placeholder="Sua Mensagem" required></textarea>
+
+                        <button type="submit">Enviar</button>
+
+                    </form> <!-- Fim do Form -->
+
+                </div> <!-- Fim da Div -->
+
+                <div>
+
+                    <h3>Nos Acompanhe</h3>
+
+                    <ul class="social-links"> 
+
+                        <li>
+
+                            <a href="#" title="Siga-nos no Instagram"></a>
+                            <img src="./images/instagram.png" alt="instagram">
+
+                        </li>
+
+                        <li>
+
+                            <a href="#" title="Siga-nos no Facebook"></a>
+                            <img src="./images/facebook.png" alt="Facebook">
+
+                        </li>
+
+                        <li>
+
+                            <a href="#" title="Siga-nos no YouTuber"></a>
+                            <img src="./images/youtube.png" alt="YouTube">
+
+                        </li>
+
+                    </ul> <!-- Fim da Lista-->
+
+                </div> <!-- Fim da Div -->
+
+                <div>
+
+                    <h3>Venha até nós</h3>
+
+                    <p>
+
+                        Rua JavaScript nº 123, Vila HTML - São Paulo - SP
+
+                    </p>
+
+                </div> <!-- Fim da Div -->
+
+            </div> <!-- Fim da Div -->
+
+        </div> <!-- Fim do Container -->
+
+    </section> <!-- Fim da Section -->
+
+    <footer>
+
+        <div class="container">
+
+            <p>
+
+                &copy; Games SHOP - Todos os Direitos Reservados - 2022
+
+            </p>
+
+        </div> <!-- Fim da Div -->
+
+    </footer> <!-- Fim do Footer -->
 
 
 </body>
